가이드 및 샘플 프로젝트 경로 정보를 package.json에 추가

--- a/Assets/Isometric2D/package.json
+++ b/Assets/Isometric2D/package.json
@@ -15,6 +15,13 @@
       "email": "dorothy9795@gmail.com",
       "url": "https://github.com/MyNameIsDabin/UnityIsometric2D"
     },
+    "samples": [
+      {
+        "displayName": "Basic Example",
+        "description": "A basic example demonstrating isometric 2.5D object alignment.",
+        "path": "Samples~/Demo"
+      }
+    ],
     "dependencies": {
     },
     "keywords": [
