--- a/Assets/Isometric2D/package.json
+++ b/Assets/Isometric2D/package.json
@@ -1,8 +1,8 @@
 {
     "name": "com.davin.isometric2d",
     "displayName": "Isometric2D",
-    "version": "1.1.0",                
-    "unity": "2021.3",                 
+    "version": "1.1.1",                
+    "unity": "2023.2",                 
     "description": "A plugin that supports isometric 2.5D object alignment.",
     "licenses": [
       {
@@ -23,6 +23,9 @@
       }
     ],
     "dependencies": {
+      "com.unity.burst": "1.8.25",
+      "com.unity.mathematics": "1.3.2",
+      "com.unity.collections": "2.6.2"
     },
     "keywords": [
       "isometric",
